fixing layout issues.

--- a/src/sass/_components/_modules/_introduction.scss
+++ b/src/sass/_components/_modules/_introduction.scss
@@ -1,17 +1,22 @@
 #introduction {
-    position: absolute;
+    // position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 185px);
     min-height: 500px;
     background: url($imagePath + 'london.jpg') center bottom no-repeat;
     background-size: cover;
     z-index: -1;
 
+    @include mq($from: medium) {
+        height: calc(100vh - 138px);
+    }
+
     .content-wrapper {
         position: absolute;
         top: 50%;
         width: calc(100% - 20px);
+        max-width: 100%;
         text-align: center;
         @include translate(0, -50%);
     }
